[package]
name = "my-redis"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
mini-redis = "0.2"
tokio = {version = "0.2", features = ["full"]}
